ADDED THE PICTURES OF FAMOUS PLACE

--- a/NextStop - London/pages/gallery.html
+++ b/NextStop - London/pages/gallery.html
@@ -31,12 +31,12 @@
     </section>
 
     <section class="gallery-grid">
-      <img src="../assets/images/gallery1.jpg" alt="Tower Bridge at sunset">
-      <img src="../assets/images/gallery2.jpg" alt="London Eye during the night">
-      <img src="../assets/images/gallery3.jpg" alt="Street art in Shoreditch">
-      <img src="../assets/images/gallery4.jpg" alt="Buckingham Palace Changing of the Guard">
-      <img src="../assets/images/gallery5.jpg" alt="Camden Market scene">
-      <img src="../assets/images/gallery6.jpg" alt="St. Paul's Cathedral interior">
+      <img src="../assets/images/london bridge sunset.jpg" alt="Tower Bridge at sunset">
+      <img src="../assets/images/london eye.jpg" alt="London Eye during the night">
+      <img src="../assets/images/british museum.jpg" alt="british museum">
+      <img src="../assets/images/buckingham palace.png" alt="Buckingham Palace Changing of the Guard">
+      <img src="../assets/images/camden market.jpg" alt="Camden Market scene">
+      <img src="../assets/images/St. Paul's.jpg" alt="St. Paul's Cathedral interior">
     </section>
   </main>
 
