--- a/gallery.html
+++ b/gallery.html
@@ -106,6 +106,9 @@ Its dome, rising 365 feet (111 meters), remains one of the tallest in the world 
  </div>
 
 
+ <!--end-->
+
+
       
       
     </section>
