--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/about.html">About</a></li>
         <li><a href="pages/gallery.html">Gallery</a></li>
-        <li><a href="pages/features.html">Features</a></li>
+        <li><a href="pages/FAQS.html">FAQS</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
