Final Code Submission from our team

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
+    <!-- Hamburger Icon -->
+<div class="hamburger" id="hamburger">
+  ☰
+</div>
+
   </header>
 
   <main>
